<resources>
    <string name="app_name" translatable="false">Xtra</string>
    <string name="notification_downloads_channel_id" translatable="false">xtra_downloads_channel</string>
    <string name="notification_live_channel_id" translatable="false">xtra_live_channel</string>
    <string name="notification_playback_channel_id" translatable="false">xtra_playback_channel</string>
    <string name="lang_de" translatable="false">Deutsch</string>
    <string name="lang_en" translatable="false">English</string>
    <string name="lang_es" translatable="false">Español</string>
    <string name="lang_fr" translatable="false">Français</string>
    <string name="lang_in" translatable="false">Indonesia</string>
    <string name="lang_it" translatable="false">Italiano</string>
    <string name="lang_pt_br" translatable="false">Português - Brasil</string>
    <string name="lang_tr" translatable="false">Türkçe</string>
    <string name="lang_ru" translatable="false">Русский</string>
    <string name="lang_ar" translatable="false">العربية</string>
    <string name="lang_ja" translatable="false">日本語</string>
    <string name="lang_zh_tw" translatable="false">中文（繁體）</string>
    <string name="lang_zh_cn" translatable="false">中文（简体）</string>
    <string name="games">Games</string>
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="downloads">Downloads</string>
    <string name="connection_error">Error connecting to the server. Please try again</string>
    <string name="sort">Sort</string>
    <string name="upload_date">Upload date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="view_count">View count</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="sort_and_period">Sort by: %1$s. Period: %2$s</string>
    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="videos">Videos</string>
    <string name="clips">Clips</string>
    <string name="scroll_down">Scroll down</string>
    <string name="auto">Auto</string>
    <string name="source">Source</string>
    <string name="audio_only">Audio only</string>
    <string name="chat_only">Chat only</string>
    <string name="select_quality">Select quality</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Download complete</string>
    <string name="uploaded_date">Uploaded %s</string>
    <string name="downloaded_date">Downloaded %s</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="skip">Skip</string>
    <string name="specify_time">Specify time</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="duration">Duration: %s</string>
    <string name="invalid_time">Invalid time</string>
    <string name="from_is_greater">Time From must be less than To</string>
    <string name="to_is_lesser">Time To must be greater than From</string>
    <string name="to_is_longer">To can\'t be greater than video length</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this video?</string>
    <string name="token_expired">Your session has expired. Please log in again</string>
    <string name="no_connection">No Internet connection</string>
    <string name="connection_restored">Back online</string>
    <string name="notification_downloads_channel_title">Downloads</string>
    <string name="storage_permission_title">The app needs storage permission</string>
    <string name="storage_permission_message">Storage permission is required to download videos.</string>
    <string name="permission_denied">Required permissions were denied</string>
    <string name="nothing_here">Nothing here</string>
    <string name="watch_live">Watch live</string>
    <string name="watch_rerun">Watch rerun</string>
    <string name="open_player">Open player</string>
    <string name="error_stream">Error when loading stream</string>
    <string name="dark">Dark</string>
    <string name="amoled">Black</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="landscape_chat_width">Landscape chat width</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="internal_storage">Internal storage</string>
    <string name="save_to">Save to</string>
    <string name="no_storage_detected">No available storage detected (most likely the phone is connected to a computer).</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Fast forward</string>
    <string name="picture_in_picture">Picture-in-Picture</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="language">Language</string>
    <string name="rounduserimage">Circle profile pictures</string>
    <string name="truncated_view_counts">Truncated view counts</string>
    <string name="broadcastersCount">Show broadcasters count on games</string>
    <string name="startonfollowed">Start on following page</string>
    <string name="show_scrolltop">Show scroll to top button</string>
    <string name="api_helix_client_id">Helix client id</string>
    <string name="api_gql_client_id">GQL client id</string>
    <string name="playback_speed">Playback speed</string>
    <string name="quality">Quality</string>
    <string name="show_uptime">Show stream uptime</string>
    <string name="show_tags">Show tags</string>
    <string name="use_followpager">Use tabs layout for following page</string>
    <string name="api_login">Get token for selected apis</string>
    <string name="api_helix_redirect">Helix redirect url</string>
    <string name="api_gql_redirect">GQL redirect url</string>
    <string name="show_vod_time_left">Show time left on bookmarked vods</string>
    <string name="use_savedpager">Use tabs layout for saved page</string>
    <string name="live_target_offset">Live target offset</string>
    <string name="buffer_for_playback">Buffer for playback</string>
    <string name="rebuffer">Rebuffer</string>
    <string name="buffer_settings">Buffer settings</string>
    <string name="player_buttons">Player buttons</string>
    <string name="toggle_chat_bar">Toggle chat input</string>
    <string name="toggle_chat">Toggle chat</string>
    <string name="viewer_list">Viewer list</string>
    <string name="disconnect_chat">Disconnect from chat</string>
    <string name="volume">Volume</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="restart_player">Restart player</string>
    <string name="follow_button">Follow button</string>
    <string name="bookmark">Bookmark</string>
    <string name="reload_emotes">Reload emotes</string>
    <string name="api_current_login">Current login</string>
    <string name="api_user_id">Account id</string>
    <string name="api_user_login">Account login</string>
    <string name="api_helix_token">Helix token</string>
    <string name="api_gql_token">GQL token</string>
    <string name="api_validate_tokens">Validate tokens on startup</string>
    <string name="stream_proxy_url">Custom proxy url</string>
    <string name="stream_proxy_url_desc">\"$channel\" will be replaced with channel login</string>
    <string name="toggle_subtitles">Toggle subtitles</string>
    <string name="use_gamepager">Use tabs layout for game page</string>
    <string name="proxy_settings">HTTP proxy settings</string>
    <string name="stop_download">Stop download</string>
    <string name="resume_download">Resume download</string>
    <string name="use_custom_proxy">Use custom proxy</string>
    <string name="use_custom_proxy_desc">Requires an url that returns a playlist</string>
    <string name="import_app_downloads">Import downloads from app storage</string>
    <string name="move_to_shared_storage">Move to shared storage</string>
    <string name="download_vod_to_file">Download videos to single files</string>
    <string name="convert_vod_to_file">Convert to a file</string>
    <string name="change_chat_file">Change chat file</string>
    <string name="download_wifi_only">Download using Wi-Fi only</string>
    <string name="download_live_check">Stream playlist check frequency</string>
    <string name="download_live_check_summary">Seconds to wait between checks to see if the playlist has new segments</string>
    <string name="download_offline_check">Live check frequency</string>
    <string name="download_offline_check_summary">Seconds to wait between checks to see if stream is live</string>
    <string name="download_start_wait">Wait time before stream</string>
    <string name="download_start_wait_summary">Minutes to wait for stream to start</string>
    <string name="download_end_wait">Wait time after stream</string>
    <string name="download_end_wait_summary">Minutes to wait for another stream to start after previous one has ended</string>
    <string name="draw_behind_cutouts">Draw behind display cutouts</string>
    <string name="backup_settings">Backup settings and data</string>
    <string name="restore_settings">Restore settings and data</string>
    <string name="share">Share</string>
    <string name="live_notifications">Live notifications</string>
    <string name="name_display">Username display</string>
    <string name="name_display_summary">Shown name when display name is different from login</string>
    <string name="api_token_settings">Api token settings</string>
    <string name="download_settings">Downloads</string>
    <string name="playback_settings">Playback</string>
    <string name="chat_settings">Chat</string>
    <string name="ui_settings">UI</string>
    <string name="debug_settings">Debug</string>
    <string name="download_threads">Download threads</string>
    <string name="download_threads_summary">Number of chunks that are downloaded concurrently</string>
    <string name="chapters">Chapters</string>
    <string name="min_buffer">Minimum buffer</string>
    <string name="min_buffer_summary">Minimum buffer in milliseconds</string>
    <string name="max_buffer">Maximum buffer</string>
    <string name="max_buffer_summary">Maximum buffer in milliseconds</string>
    <string name="buffer_for_playback_summary">Buffer needed to start playback in milliseconds</string>
    <string name="rebuffer_summary">Buffer needed to resume playback after running out of buffer in milliseconds</string>
    <string name="live_min_speed">Live minimum speed</string>
    <string name="live_min_speed_summary">Minimum playback speed for streams as float</string>
    <string name="live_max_speed">Live maximum speed</string>
    <string name="live_max_speed_summary">Maximum playback speed for streams as float</string>
    <string name="live_target_offset_summary">Offset from the live edge in milliseconds</string>
    <string name="hide_stream_previews">Hide stream previews</string>
    <string name="player_settings">Player</string>
    <string name="use_background_audio">Play audio in the background</string>
    <string name="api_web_gql_token">Web GQL token</string>
    <string name="navigation_tabs">Navigation tabs</string>
    <string name="following_tabs">Following tabs</string>
    <string name="saved_tabs">Saved tabs</string>
    <string name="channel_tabs">Channel tabs</string>
    <string name="game_tabs">Game tabs</string>
    <string name="search_tabs">Search tabs</string>
    <string name="store_recent_searches">Store recent searches</string>
    <string name="delete_recent_searches">Delete recent searches</string>
</resources>