<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="auto"
        android:entries="@array/languageEntries"
        android:entryValues="@array/language"
        android:key="ui_language"
        android:summary="%s"
        android:title="@string/language"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="ui_draw_behind_cutouts"
        android:title="@string/draw_behind_cutouts"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="live_notifications_enabled"
        android:title="@string/live_notifications"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="theme_settings"
        android:title="@string/theme"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="ui_settings"
        android:title="@string/ui_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="chat_settings"
        android:title="@string/chat_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="player_picture_in_picture"
        android:title="@string/picture_in_picture"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="player_background_audio"
        android:title="@string/use_background_audio"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="player_settings"
        android:title="@string/player_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="player_button_settings"
        android:title="@string/player_buttons"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="buffer_settings"
        android:title="@string/buffer_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="false"
        android:key="player_stream_proxy"
        android:summary="@string/use_custom_proxy_desc"
        android:title="@string/use_custom_proxy"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="https://api.ttv.lol/playlist/$channel.m3u8?allow_source=true&amp;allow_audio_only=true&amp;fast_bread=true"
        android:key="player_proxy_url"
        android:summary="@string/stream_proxy_url_desc"
        android:title="@string/stream_proxy_url"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="proxy_settings"
        android:title="@string/proxy_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="playback_settings"
        android:title="@string/playback_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="api_token_settings"
        android:title="@string/api_token_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="download_settings"
        android:title="@string/download_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="backup_settings"
        android:title="@string/backup_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="restore_settings"
        android:title="@string/restore_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="debug_settings"
        android:title="@string/debug_settings"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

</androidx.preference.PreferenceScreen>
