<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="@string/portraitColumns"
        android:key="columnsPortrait"
        android:entries="@array/portraitColumnCount"
        android:entryValues="@array/portraitColumnCount"
        android:summary="%s"
        android:title="@string/portrait_column_count"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="@string/landscapeColumns"
        android:key="columnsLandscape"
        android:entries="@array/landscapeColumnCount"
        android:entryValues="@array/landscapeColumnCount"
        android:summary="%s"
        android:title="@string/landscape_column_count"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/followButtonEntries"
        android:entryValues="@array/miscValues"
        android:key="ui_follow_button"
        android:summary="%s"
        android:title="@string/follow_button"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/followedEntries"
        android:entryValues="@array/miscValues"
        android:key="ui_startonfollowed"
        android:summary="%s"
        android:title="@string/startonfollowed"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="ui_navigation_tab_list_dialog"
        android:title="@string/navigation_tabs"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="ui_following_tabs_dialog"
        android:title="@string/following_tabs"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="ui_saved_tabs_dialog"
        android:title="@string/saved_tabs"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="ui_channel_tabs_dialog"
        android:title="@string/channel_tabs"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="ui_game_tabs_dialog"
        android:title="@string/game_tabs"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="ui_search_tabs_dialog"
        android:title="@string/search_tabs"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="disabled"
        android:entries="@array/compactStreamsEntries"
        android:entryValues="@array/compactStreamsValues"
        android:key="compactStreamsV2"
        android:summary="%s"
        android:title="@string/hide_stream_previews"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/nameDisplayEntries"
        android:entryValues="@array/nameDisplayValues"
        android:key="ui_name_display"
        android:summary="@string/name_display_summary"
        android:title="@string/name_display"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_rounduserimage"
        android:title="@string/rounduserimage"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_truncateviewcount"
        android:title="@string/truncated_view_counts"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_uptime"
        android:title="@string/show_uptime"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_tags"
        android:title="@string/show_tags"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_broadcasterscount"
        android:title="@string/broadcastersCount"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_followpager"
        android:title="@string/use_followpager"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_savedpager"
        android:title="@string/use_savedpager"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_gamepager"
        android:title="@string/use_gamepager"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_scrolltop"
        android:title="@string/show_scrolltop"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_bookmark_time_left"
        android:title="@string/show_vod_time_left"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="ui_store_recent_searches"
        android:title="@string/store_recent_searches"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <Preference
        android:key="delete_recent_searches"
        android:title="@string/delete_recent_searches"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

</androidx.preference.PreferenceScreen>
