<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/loginApiEntries"
        android:entryValues="@array/miscValues"
        android:key="api_login"
        android:summary="%s"
        android:title="@string/api_login"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="ilfexgv3nnljz3isbm257gzwrzr7bi"
        android:key="helix_client_id"
        android:title="@string/api_helix_client_id"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="https://localhost"
        android:key="helix_redirect"
        android:title="@string/api_helix_redirect"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="kd1unb4b3q4t58fwlpcbzcbnm76a8fp"
        android:key="gql_client_id2"
        android:title="@string/api_gql_client_id"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:defaultValue="https://www.twitch.tv/"
        android:key="gql_redirect2"
        android:title="@string/api_gql_redirect"
        app:useSimpleSummaryProvider="true"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <PreferenceCategory
        android:title="@string/api_current_login"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:key="user_id"
        android:title="@string/api_user_id"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:key="username"
        android:title="@string/api_user_login"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:key="token"
        android:title="@string/api_helix_token"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:key="gql_token2"
        android:title="@string/api_gql_token"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <EditTextPreference
        android:key="gql_token_web"
        android:title="@string/api_web_gql_token"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

    <SwitchPreferenceCompat
        android:defaultValue="true"
        android:key="validate_tokens"
        android:title="@string/api_validate_tokens"
        app:iconSpaceReserved="false"
        app:singleLineTitle="false" />

</androidx.preference.PreferenceScreen>
